# plattenalbum

./: .gitignore  AUTHORS  Makefile.am  NEWS  README  README.md  README.rst  autogen.sh  configure.ac  de.wagnermartin.Plattenalbum.json  fr.chartrandphilippe.Vinyle.json  meson.build  plattenalbum.doap  requirements.txt  setup.py  vinyle.doap
.github/workflows/: CI.yml
data/: AboutDialog.ui  Makefile.am  ShortcutsWindow.ui  de.wagnermartin.Plattenalbum.appdata.xml  de.wagnermartin.Plattenalbum.appdata.xml.in  de.wagnermartin.Plattenalbum.desktop.in  de.wagnermartin.Plattenalbum.gresource.xml  de.wagnermartin.Plattenalbum.gschema.xml  de.wagnermartin.Plattenalbum.metainfo.xml.in  fr.chartrandphilippe.Vinyle.desktop.in  fr.chartrandphilippe.Vinyle.gresource.xml  fr.chartrandphilippe.Vinyle.gschema.xml  fr.chartrandphilippe.Vinyle.metainfo.xml.in  meson.build  mpdevil.desktop.in  mpdevil.desktop.in.in  mpdevil.gresource.xml  org.mpdevil.gschema.xml  org.mpdevil.mpdevil.appdata.xml  org.mpdevil.mpdevil.desktop.in  org.mpdevil.mpdevil.gschema.xml  shortcuts-dialog.ui  style-hc.css  style.css
mpdevil/: __init__.py  lyrics.py
po/: LINGUAS  POTFILES  POTFILES.in  POTFILES.skip  bg.po  de.po  de.wagnermartin.Plattenalbum.pot  fa.po  fr.chartrandphilippe.Vinyle.pot  fr.po  hi.po  hr.po  ja.po  kk.po  meson.build  mpdevil.pot  nl.po  pl.po  pt_BR.po  ro.po  ru.po  th.po  tr.po  zh_CN.po
src/: meson.build  mpdevil.in  mpdevil.py  plattenalbum.py  vinyle.py
src/lib/: album.py  artist.py  bitrate.py  browser.py  browsersong.py  client.py  dialogs.py  duration.py  event_emitter.py  functions.py  lookup_icon.py  lyrics.py  media_buttons.py  models.py  mpris.py  player.py  playlist.py  progress.py  settings.py  song.py
src/plattenalbumlib/: album.py  album_cover.py  album_list_row.py  album_page.py  albums_page.py  application.py  artist.py  artist_album.py  bitrate.py  browser.py  browsersong.py  client.py  composer.py  composer_album.py  cover.py  dialogs.py  duration.py  functions.py  lyrics.py  main_window.py  meson.build  models.py  mpris.py  multitag.py  player.py  player_bar.py  playlist.py  progress.py  search.py  settings.py  sidebar_list_view.py  song.py
src/plattenalbumlib/album/: __init__.py  album_page.py  albums_page.py  meson.build
src/plattenalbumlib/artist/: __init__.py  artist.py  artist_list.py  meson.build
src/plattenalbumlib/artist_album/: artist_album.py  artist_album_list_row.py  artist_album_page.py  artist_albums_page.py  meson.build
src/plattenalbumlib/composer/: __init__.py  composer.py  composer_list.py  composer_selection_model.py  meson.build
src/plattenalbumlib/composer_album/: __init__.py  composer_album.py  composer_album_list_row.py  composer_album_page.py  composer_album_row.py  composer_albums_page.py  meson.build
src/plattenalbumlib/dialogs/: __init__.py  connect_dialog.py  manual_connect_dialog.py  meson.build  preferences_dialog.py  setup_dialog.py  view_preferences.py
src/plattenalbumlib/player/: __init__.py  meson.build  volume_control.py
src/plattenalbumlib/playlist/: __init__.py  meson.build  playlist_menu.py  playlist_view.py  playlist_window.py
src/plattenalbumlib/song/: __init__.py  meson.build  song.py  song_menu.py
src/vinylelib/: application.py  browser.py  client.py  cover.py  event_emitter.py  lyrics.py  main_window.py  media_buttons.py  meson.build  mpris.py  settings.py
src/vinylelib/album/: album.py  album_cover.py  albums_page.py  meson.build
src/vinylelib/artist/: artist.py  artist_list.py  artist_selection_model.py  meson.build
src/vinylelib/artist_album/: __init__.py  artist_album.py  artist_album_list_row.py  artist_album_row.py  meson.build
src/vinylelib/dialogs/: behaviour_preferences.py  meson.build  server_info.py  setup_dialog.py
src/vinylelib/player/: meson.build  playback_controls.py  player.py  player_bar.py  player_menu.py
src/vinylelib/playlist/: meson.build
src/vinylelib/song/: meson.build  song_list.py  song_list_row.py
