## Process this file with automake to produce Makefile.in

AUTOMAKE_OPTIONS = dist-xz no-dist-gzip

SUBDIRS = bin data po

CLEANFILES=

EXTRA_DIST = autogen.sh
DISTCLEANFILES = intltool-extract.in intltool-merge.in intltool-update.in intltool-extract intltool-merge intltool-update

README: README.rst

