#conf = configuration_data()

#configure_file(
#          input: 'mpdevil.py',
#         output: 'mpdevil',
#  configuration: conf,
#    install_dir: join_paths(get_option('prefix'), get_option('bindir'))
#)

install_data('mpdevil', install_dir: join_paths(get_option('prefix'), get_option('bindir')))
