# FIXME: find a way to include all python files from this directory
install_headers(
'__init__.py', 'album_cover.py', 'artist.py', 'artist_album.py', 'bitrate.py', 'browser.py', 'browsersong.py', 'client.py',
'composer.py', 'composer_album.py', 'cover.py', 'dialogs.py', 'duration.py', 'event_emitter.py', 'functions.py',
'lyrics.py', 'media_buttons.py', 'models.py', 'mpris.py', 'multitag.py', 'player.py', 'player_bar.py', 'playlist.py',
'progress.py', 'search.py', 'settings.py', 'song.py'
, install_dir: 'bin/plattenalbumlib')