# FIXME: find a way to include all python files from this directory
subdir('album')
subdir('artist')
subdir('artist_album')
subdir('dialogs')
subdir('player')
subdir('playlist')
subdir('song')
install_headers(
'__init__.py', 'application.py', 'bitrate.py',
'browser.py', 'browsersong.py', 'client.py', 'cover.py', 'duration.py', 'event_emitter.py', 'functions.py', 'lyrics.py',
'main_window.py', 'media_buttons.py', 'models.py', 'mpris.py', 'multitag.py', 'progress.py', 'search.py', 'settings.py',
'sidebar_list_view.py',
install_dir: 'bin/vinylelib')
