# FIXME: find a way to include all python files from this directory
install_headers(
'__init__.py',
'behaviour_preferences.py', 'connect_dialog.py', 'manual_connect_dialog.py', 'preferences_dialog.py',
'server_info.py', 'setup_dialog.py', 'view_preferences.py',
 install_dir: 'bin/vinylelib/dialogs'
)
